--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
     <%# user is not logged in, show signup and login links %>
     <% else %>
+      <%= link_to 'Home', root_path %> |
       <%= link_to 'Sign In', new_user_session_path %> |
       <%= link_to 'Register Now!', new_user_registration_path %>
     <% end %>
