--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,9 @@
 <h2>I AMA Homepage</h2>
 
+<% @links.each do |link| %>
+  <ul>
+  	<li><%= link_to link.title, link.url %><br><%= link.url %></li>
+  </ul>
+<% end %>
+
 <%= link_to "Add a link", new_link_path %>
