--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,7 @@
 <ul>
   <% @links.each do |link| %>
   	<li><%= link_to link.title, link.url %><br><%= link.url %></li>
+  	<%= link_to "comments", link_path(link) %>  
   <% end %>
 </ul>
 
