--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -3,7 +3,8 @@
 <h2>Comments:</h2>
 <div>
   <% @link.comments.each do |comment| %>
-    <p><%= comment.message %></p>
+    <p class="comment"><%= comment.message %></p>
+    <p class="comment_time">posted <%= time_ago_in_words(comment.created_at) %> ago by <%= User.find(comment.user_id).email %></p>
   <% end %>
 </div>
 
