--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,8 +4,21 @@
   <% @links.each do |link| %>
   	<li><%= link_to link.title, link.url %><br><%= link.url %></li>
   	<%= link_to "comments", link_path(link) %>  
-  	<%= link_to "+", votes_path(:vote => {:link_id => link.id, :up => true}), :method => :post %>
-  	<%= link_to "-", votes_path(:vote => {:link_id => link.id, :up => false}), :method => :post %>
+  	
+  	<%# Let a user know when they have voted for a link and whether %>
+  	<%# they voted up or down by changing the "+/-" to a "*" and    %>
+  	<%# making it not click-able. 									%>
+  	<% if current_user && current_user.votes.where(:link_id => link.id, :up => true).present? %>
+      *
+  	<% else %>
+      <%= link_to "+", votes_path(:vote => {:link_id => link.id, :up => true}), :method => :post %>
+  	<% end %>
+  	<% if current_user && current_user.votes.where(:link_id => link.id, :up => false).present? %>
+      *
+  	<% else %>
+      <%= link_to "-", votes_path(:vote => {:link_id => link.id, :up => false}), :method => :post %>
+  	<% end %>
+
   	Up Votes: <%= link.votes.where(:up => true).count %>
     Down Votes: <%= link.votes.where(:up => false).count %>
     Votes Results: <%= link.votes.where(:up => true).count - link.votes.where(:up => false).count %>
